<resources>
    <string name="app_name">StudySmart</string>
    <string name="create_deck">Create Deck</string>
    <string name="collections">Deck Collections</string>
    <string name="duel">Duel</string>
    <string name="type_deck_name_here">Type deck name here</string>
    <string name="back_of_flashcard">back of flashcard</string>
    <string name="front_of_flashcard">front of flashcard</string>
    <string name="add">Add</string>
    <string name="add_flashcard">Add FlashCard</string>
    <string name="deck_info_text_view">Total:   \nPercent Correct:   \nDifficulty:</string>
    <string name="study">Study</string>
    <string name="add_new_flashcard">Add New Flashcard</string>
    <string name="answer">Answer</string>
    <string name="easy_button">easy</string>
    <string name="correct_button">correct</string>
    <string name="hard_button">hard</string>
    <string name="add_deck">Add Deck</string>
    <string name="main_menu">Main Menu</string>
    <string name="deck_confirm">Confirm Deck</string>
    <string name="rename_deck">Rename Deck</string>
    <string name="view_deck">View Deck</string>
    <string name="rename_message">Enter a New Name for Deck</string>
    <string name="rename_confirm">Confirm</string>
    <string name="add_image">Add Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="back_to_deck">Deck</string>
    <string name="easy_difficulty">Easy</string>
    <string name="hard_difficulty">Hard</string>
    <string name="medium_difficulty">Medium</string>
    <string name="next_card">Next</string>
    <string name="remove_card">Remove Card</string>
    <string name="cancel_add_card">Cancel</string>
</resources>
