<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/backOfFlashCardFragment">

    <Button
        android:id="@+id/addNewFlashcard"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_flashcard"/>

    <!-- text size needs to be set in text view -->
    <TextView
        android:id="@+id/frontOfFlashCardTextView"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/addNewFlashcard"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@id/frontOfFlashCardTextView"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/easyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_button"
            />

        <Button
            android:id="@+id/correctButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_button"
            />
        <Button
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_button"
            />


    </LinearLayout>
</RelativeLayout>