<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewDeckActivity">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="251dp"
        android:layout_height="64dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/answerButton"
        android:layout_width="120dp"
        android:layout_height="78dp"
        android:onClick="answerCard"
        android:text="@string/answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/backToDeckButton"
        android:layout_width="120dp"
        android:layout_height="78dp"
        android:onClick="returnToDeck"
        android:text="@string/back_to_deck"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/addImageButton2"
        android:layout_width="120dp"
        android:layout_height="78dp"
        android:onClick="addImage"
        android:text="@string/add_image"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <Button
        android:id="@+id/removeImageButton"
        android:layout_width="120dp"
        android:layout_height="78dp"
        android:text="@string/remove_image"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="82dp"
        android:layout_height="69dp"
        android:onClick="deleteCard"
        android:text="@string/remove_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="204dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addImageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeButton"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?attr/actionModeBackground" />
</android.support.constraint.ConstraintLayout>