<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCollectionActivity">

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="148dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:onClick="backToMainMenu"
        android:text="@string/main_menu"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addDeckButton"
        android:layout_width="148dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_deck"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/deckSpinner"
        android:layout_width="257dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/deckConfirmButton"
        android:layout_width="89dp"
        android:layout_height="91dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="26dp"
        android:text="@string/deck_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/deckSpinner"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>