<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp">

    <TextView
        android:id="@+id/deckInfo"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/deck_info_text_view"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@id/deckInfo"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/addFlashCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_flashcard" />

        <Button
            android:id="@+id/studyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toStudy"
            android:text="@string/study" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        tools:textSize="24dp" />

    <TextView
        android:id="@+id/percentageTextView"
        android:layout_width="62dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="134dp"
        android:layout_marginTop="36dp"
        tools:textSize="24dp" />

    <TextView
        android:id="@+id/difficultyTextView"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="109dp"
        android:layout_marginTop="68dp"
        tools:textSize="36sp" />
</RelativeLayout>