<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/duelButton"
        android:layout_width="261dp"
        android:layout_height="112dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/duel"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <Button
        android:id="@+id/deckCollectionButton"
        android:layout_width="261dp"
        android:layout_height="112dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="collection"
        android:text="@string/collections"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createDeckButton"
        android:layout_width="261dp"
        android:layout_height="112dp"
        android:background="@android:drawable/alert_dark_frame"
        android:onClick="createDeck"
        android:text="@string/create_deck"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/deckCollectionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        app:layout_constraintVertical_chainStyle="spread_inside" />

</android.support.constraint.ConstraintLayout>